--- a/src/container/oreha/Oreha.scss
+++ b/src/container/oreha/Oreha.scss
@@ -1,4 +1,12 @@
+.Oreha{
+    background-color: whitesmoke;
+    width: 100%;
+    height: 100vh;
+}
+
 .Oreha__main{
+    background-color: white;
+    height: 100vh;
     &__ingredientValue{
         padding-top: 30px;
     }
