--- a/src/container/oreha/Oreha.scss
+++ b/src/container/oreha/Oreha.scss
@@ -2,6 +2,7 @@
     background-color: whitesmoke;
     width: 100%;
     height: 100%;
+
 }
 
 .Oreha__main{
@@ -14,3 +15,12 @@
         padding-top: 30px;
     }
 }
+
+.Loading{
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
